--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "start": "node src/index.js"
   },
   "dependencies": {
+    "@google/genai": "^1.10.0",
+    "openai": "^5.10.1",
     "simple-git": "^2.40.0"
   },
-  "devDependencies": {},
   "keywords": [
     "AI",
     "code review",
