--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "1.0.0",
   "description": "An AI tool for automated code review against the master branch.",
   "main": "src/index.js",
+  "bin": {
+    "ai-review-code": "./src/index.js"
+  },
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "ai-review-code": "node src/index.js ai review code"
   },
   "dependencies": {
     "@google/genai": "^1.10.0",
